--- a/about.html
+++ b/about.html
@@ -322,7 +322,7 @@ blockquote .name {
 			<main role="main" class="main">
 				<!-- <h2>Image Reconstruction through Generative Adversarial Networks</h2> -->
 				<section id="about" class="section">
-					<p>Hi, I'm Michael, an undergraduate at UC Berkeley!</p>
+					<p>Hi, I'm Michael, an undergraduate at UC Berkeley! I'm in a club called Launchpad on campus where we do lots of ML.</p>
                         <p> In the past, I was an iOS intern and did web dev on the side. More recently, I've been more interested in AI, in particular generative models. I wrote a short paper on image reconstruction through GANs, as well as a DCGAN to generate images with instructed features.</p> <p> I also do game dev on the side with a close group of friends, and we've released a game on Steam called Rain Project.</p>
 				</section>
 
